--- a/CleanArchitecture.Api/CleanArchitecture.Api.csproj
+++ b/CleanArchitecture.Api/CleanArchitecture.Api.csproj
@@ -15,6 +15,7 @@
     <ItemGroup>
         <ProjectReference Include="..\CleanArchitecture.Application\CleanArchitecture.Application.csproj"/>
         <ProjectReference Include="..\CleanArchitecture.Contracts\CleanArchitecture.Contracts.csproj"/>
+        <ProjectReference Include="..\CleanArchitecture.Infrastructure\CleanArchitecture.Infrastructure.csproj"/>
     </ItemGroup>
 
 </Project>
